# fastapi_uv_template

./: .gitignore  cookiecutter.json  pyproject.toml
app/: main.py  settings.py
app/interfaces/api/: routes.py
hooks/: post_gen_project.py  pre_gen_project.py  pre_prompt.py
{{cookiecutter.project_name}}/: .python-version  README.md  pyproject.toml
